fix #15 set z-index to 10 for .dropdown-menu

--- a/home/static/home/css/base.css
+++ b/home/static/home/css/base.css
@@ -57,7 +57,7 @@ a:not(.logo):hover {
 }
 
 .dropdown-menu {
-	z-index: 1;
+	z-index: 10;
 }
 
 footer {
